# knative-slack-bolt

./: .gitignore  Dockerfile  README.md  codefresh.yml  knative-slack-bolt.yaml  pyproject.toml  slack_app_manifest.yaml
.github/workflows/: build_push_dockerhub.yaml
helm/: Chart.yaml  values.yaml
helm/templates/: service.yaml
manifests/: knative-slack-bolt.yaml  knative.yaml
manifests/knative-slack-bolt/: Chart.yaml  values.yaml
manifests/knative-slack-bolt/templates/: service.yaml
src/: app.py  blocks_machine.py  bolt_app.py  bot_app.py  data_engine.py  modals_app_typed.py
src/models/: shopify_store.py
src/utilities/: middleware.py
