[tool.poetry]
name = "knative-slack-bolt"
version = "0.1.0"
description = ""
authors = ["Timothy Walter <tmwalter98@gmail.com>"]
readme = "README.md"
packages = [{include = "knative_slack_bolt"}]

[tool.poetry.dependencies]
python = "^3.10"
slack-bolt = "^1.17.0"
aiohttp = "^3.8.4"
cloudevents = "^1.9.0"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
