[tool.poetry]
name = "knative-slack-bolt"
version = "0.1.0"
description = ""
authors = ["Timothy Walter <tmwalter98@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
slack-bolt = "^1.17.0"
aiohttp = "^3.8.4"
cloudevents = "^1.9.0"
sqlalchemy = "^2.0.9"
psycopg2-binary = "^2.9.6"
pytz = "^2023.3"
humanize = "^4.6.0"
path-dict = "^4.0.0"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
black = "^23.3.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
